dev/06-UserMgmtWebApp-Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgmt-webapp
  namespace: argocd
  labels:
    app: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp
  template:
    metadata:
      labels:
        app: usermgmt-webapp
    spec:
      containers:
        - name: usermgmt-webapp
          image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
