dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-web-app-deployment
  namespace: argocd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: argocd-web-app
  template:
    metadata:
      labels:
        app: argocd-web-app
    spec:
      imagePullSecrets:
        - name: acr-auth
      containers:
        - name: webapp
          image: aksdevopsacr1.azurecr.io/argocd-web-app:22
          ports:
            - containerPort: 80
