dev/05-mysql-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: argocd
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  clusterIP: None # This means we are going to use Pod IP
